<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/caspian_lightblue"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/deleteAll"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/history_delete"
		    android:contentDescription="@string/content_description_delete"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_button"
		    android:textSize="13dp" />

		<TextView
		    android:id="@+id/allCalls"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/history_all"
		    android:contentDescription="@string/content_description_all_calls"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_switch_button_color"
		    android:textSize="13dp" />

		<TextView
		    android:id="@+id/missedCalls"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/history_missed"
		    android:contentDescription="@string/content_description_missed_calls"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_switch_button_color"
		    android:textSize="13dp" />

		<TextView
		    android:id="@+id/edit"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/history_edit"
		    android:contentDescription="@string/content_description_edit"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_button"
		    android:textSize="13dp" />

		<TextView
		    android:id="@+id/ok"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/history_ok"
		    android:contentDescription="@string/content_description_validate"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_button"
		    android:textSize="13dp"
		    android:visibility="gone" />

	</LinearLayout>

	<ListView
		android:id="@+id/historyList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:divider="@android:color/darker_gray"
		android:cacheColorHint="@color/transparent"
		android:dividerHeight="1dp" />

	<TextView
		android:id="@+id/noCallHistory"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:text="@string/no_call_history"
		android:textColor="@drawable/text_color"
		android:textAppearance="@android:style/TextAppearance.Large"/>

	<TextView
		android:id="@+id/noMissedCallHistory"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:text="@string/no_missed_call_history"
		android:textColor="@drawable/text_color"
		android:textAppearance="@android:style/TextAppearance.Large"/>

</LinearLayout>
