<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/caspian_lightblue"
	    android:orientation="horizontal" >

		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@color/caspian_lightblue"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:visibility="invisible" />

		<TextView
		    android:id="@+id/allContacts"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/contacts_all"
		    android:contentDescription="@string/content_description_all_contacts"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_switch_button_color"
		    android:textSize="13sp" />

		<TextView
		    android:id="@+id/linphoneContacts"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/contacts_sip"
		    android:contentDescription="@string/content_description_linphone_contacts"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_switch_button_color"
		    android:textSize="13sp" />

		<TextView
		    android:id="@+id/newContact"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:adjustViewBounds="true"
		    android:background="@drawable/contacts_add_contact"
		    android:contentDescription="@string/content_description_add_contact"
		    android:gravity="center"
		    android:paddingTop="20dp"
		    android:scaleType="centerCrop"
		    android:textColor="@drawable/text_button"
		    android:textSize="13sp" />

	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:contentDescription="@string/content_description_cancel"
			android:id="@+id/clearSearchField"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:src="@drawable/list_delete"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"/>

		<EditText
			android:textCursorDrawable="@null"
			android:id="@+id/searchField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@android:color/black"
			android:background="@drawable/chat_fast_address_background"
			android:gravity="center"
			android:layout_toLeftOf="@id/clearSearchField"
			android:paddingRight="5dp"
			android:inputType="textPersonName"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ListView
			android:id="@+id/contactsList"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:divider="@android:color/darker_gray"
			android:cacheColorHint="@color/transparent"
			android:fastScrollAlwaysVisible="true"
			android:fastScrollEnabled="true"
			android:dividerHeight="1dp" />

		<TextView
			android:id="@+id/noSipContact"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:text="@string/no_sip_contact"
			android:textColor="@drawable/text_color"
			android:textAppearance="@android:style/TextAppearance.Large"/>

		<TextView
			android:id="@+id/noContact"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:text="@string/no_contact"
			android:textColor="@drawable/text_color"
			android:textAppearance="@android:style/TextAppearance.Large"/>

	</RelativeLayout>

</LinearLayout>
