<?xml version="1.0" encoding="utf-8"?>
<uk.co.onecallcaspian.custom.adapter.SmsListItem xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_bubble_outgoing"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:columnCount="3" >

        <TextView
            android:id="@+id/li_sms_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/to_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/li_sms_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_row="0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/li_sms_delivered_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/delivered_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/li_sms_delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/li_sms_retry"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="35dp"
            android:layout_column="2"
            android:layout_gravity="right"
            android:layout_row="1"
            android:text="@string/retry" />

        <ImageButton
            android:id="@+id/li_sms_delete"
            android:layout_column="2"
            android:layout_gravity="right"
            android:layout_row="0"
            android:background="@null"
            android:src="@drawable/delete_default" />

    </GridLayout>

    <TextView
        android:id="@+id/li_sms_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_fast_address_background"
        android:text="@string/lipsum_short"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</uk.co.onecallcaspian.custom.adapter.SmsListItem>
