<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:background="@drawable/background"
  	android:orientation="vertical">
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/contact_cancel"
            android:contentDescription="@string/content_description_cancel"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:textColor="@drawable/text_button" />
        
        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/contact_ok"
            android:contentDescription="@string/content_description_validate"
            android:enabled="false"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:textColor="@drawable/text_button" />
        
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/controlsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
    
		    <LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingTop="20dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
			    android:gravity="center_vertical"
			    android:orientation="horizontal">
		        
		        <uk.co.onecallcaspian.ui.AvatarWithShadow
				    android:id="@+id/contactPicture"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    linphone:picture="@drawable/unknown_small" />
			        
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical">
			        
			        <EditText
            			android:textCursorDrawable="@null"
				        android:id="@+id/contactLastName"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/contact_last_name"
				        android:textColor="@color/text_contrast"
				        android:background="@drawable/chat_fast_address_background"
				        android:gravity="left"
				        android:paddingRight="5dp"
				        android:inputType="textPersonName|textCapWords"/>
			        
			        <EditText
            			android:textCursorDrawable="@null"
				        android:id="@+id/contactFirstName"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/contact_first_name"
				        android:textColor="@color/text_contrast"
				        android:background="@drawable/chat_fast_address_background"
				        android:gravity="left"
				        android:paddingRight="5dp"
				        android:inputType="textPersonName|textCapWords"/>
		            
		        </LinearLayout>
		        
		    </LinearLayout>
		        
		    <TableLayout
		        android:id="@+id/controls"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="20dp"/>

		</LinearLayout>
    
    </ScrollView>

</LinearLayout>